src/snapshots/xot__pretty__tests__preserve_back_to_default.snap
---
source: src/pretty.rs
expression: "<doc xml:space=\"preserve\"><p xml:space=\"default\"><foo><bar/></foo></p></doc>"
---
<doc xml:space="preserve"><p xml:space="default">
  <foo>
    <bar/>
  </foo>
</p></doc>

