src/snapshots/xot__pretty__tests__preserve_nested.snap
---
source: src/pretty.rs
expression: "<doc xml:space=\"preserve\">  <p><foo>  </foo></p></doc>"
---
<doc xml:space="preserve">  <p><foo>  </foo></p></doc>

