src/snapshots/xot__pretty__tests__suppressed nested.snap
---
source: src/pretty.rs
expression: "<doc><a><b><c/></b></a></doc>"
---
<doc>
  <a><b><c/></b></a>
</doc>

