src/snapshots/xot__pretty__tests__text.snap
---
source: src/pretty.rs
expression: "<doc><a>text</a><a>text 2</a></doc>"
---
<doc>
  <a>text</a>
  <a>text 2</a>
</doc>

