src/snapshots/xot__pretty__tests__text_mixed_element_nested.snap
---
source: src/pretty.rs
expression: s
---
<doc>
  <p>Hello <em><strong>world</strong></em>!</p>
</doc>

